ChromeOS: Fix DCHECK hit when logging under Guest

We should not SwitchToLastActiveUser() when there is only one user logged in.
This covers restart on signin, when last_active_user may be outdated.

BUG=714250

Review-Url: https://codereview.chromium.org/2872133009
Cr-Commit-Position: refs/heads/master@{#471127}

Former-commit-id: 67cd35cee72cda91bc0f8254b1efc080e737d848